--- a/go/foot-chinko.html
+++ b/go/foot-chinko.html
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/master-chess.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/master-chess.png">
+                            <img src="https://sudoku-online.github.io/img/master-chess.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tiny-fishing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tiny-fishing.png">
+                            <img src="https://sudoku-online.github.io/img/tiny-fishing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/fancy-pants-3.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/fancy-pants-3.png">
+                            <img src="https://sudoku-online.github.io/img/fancy-pants-3.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/funny-shooter-2.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/funny-shooter-2.png">
+                            <img src="https://sudoku-online.github.io/img/funny-shooter-2.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/raft-wars.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/raft-wars.png">
+                            <img src="https://sudoku-online.github.io/img/raft-wars.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/monster-tracks.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/monster-tracks.png">
+                            <img src="https://sudoku-online.github.io/img/monster-tracks.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/swingo.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/swingo.png">
+                            <img src="https://sudoku-online.github.io/img/swingo.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/cubito-mayhem.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/cubito-mayhem.png">
+                            <img src="https://sudoku-online.github.io/img/cubito-mayhem.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/big-shot-boxing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/big-shot-boxing.png">
+                            <img src="https://sudoku-online.github.io/img/big-shot-boxing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/five-nights-at-freddys.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/five-nights-at-freddys.png">
+                            <img src="https://sudoku-online.github.io/img/five-nights-at-freddys.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/short-ride.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/short-ride.png">
+                            <img src="https://sudoku-online.github.io/img/short-ride.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/city-car-driving-stunt-master.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/city-car-driving-stunt-master.png">
+                            <img src="https://sudoku-online.github.io/img/city-car-driving-stunt-master.png">
                             <div class="product-badge">       
                             </div>
                         </div>
