--- a/go/friday-night-funkin.html
+++ b/go/friday-night-funkin.html
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/bitlife.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/bitlife.png">
+                            <img src="https://sudoku-online.github.io/img/bitlife.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/sausage-flip.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/sausage-flip.png">
+                            <img src="https://sudoku-online.github.io/img/sausage-flip.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/moto-x3m-pool-party.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/moto-x3m-pool-party.png">
+                            <img src="https://sudoku-online.github.io/img/moto-x3m-pool-party.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/big-shot-boxing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/big-shot-boxing.png">
+                            <img src="https://sudoku-online.github.io/img/big-shot-boxing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/unicycle-hero.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/unicycle-hero.png">
+                            <img src="https://sudoku-online.github.io/img/unicycle-hero.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/soccer-skills-champions-league.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/soccer-skills-champions-league.png">
+                            <img src="https://sudoku-online.github.io/img/soccer-skills-champions-league.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/eugenes-life.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/eugenes-life.png">
+                            <img src="https://sudoku-online.github.io/img/eugenes-life.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/gobble.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/gobble.png">
+                            <img src="https://sudoku-online.github.io/img/gobble.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/cyber-cars-punk-racing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/cyber-cars-punk-racing.png">
+                            <img src="https://sudoku-online.github.io/img/cyber-cars-punk-racing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tag.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tag.png">
+                            <img src="https://sudoku-online.github.io/img/tag.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/kart-race-3d.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/kart-race-3d.png">
+                            <img src="https://sudoku-online.github.io/img/kart-race-3d.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/duck-life-3-evolution.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/duck-life-3-evolution.png">
+                            <img src="https://sudoku-online.github.io/img/duck-life-3-evolution.png">
                             <div class="product-badge">       
                             </div>
                         </div>
