--- a/go/g-switch-3.html
+++ b/go/g-switch-3.html
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stickman-bike.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stickman-bike.png">
+                            <img src="https://sudoku-online.github.io/img/stickman-bike.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/moto-x3m-pool-party.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/moto-x3m-pool-party.png">
+                            <img src="https://sudoku-online.github.io/img/moto-x3m-pool-party.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/battle-wheels.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/battle-wheels.png">
+                            <img src="https://sudoku-online.github.io/img/battle-wheels.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/kart-race-3d.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/kart-race-3d.png">
+                            <img src="https://sudoku-online.github.io/img/kart-race-3d.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/penalty-shooters-2.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/penalty-shooters-2.png">
+                            <img src="https://sudoku-online.github.io/img/penalty-shooters-2.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stick-defenders.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stick-defenders.png">
+                            <img src="https://sudoku-online.github.io/img/stick-defenders.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/bob-the-robber-4.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/bob-the-robber-4.png">
+                            <img src="https://sudoku-online.github.io/img/bob-the-robber-4.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/wrassling.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/wrassling.png">
+                            <img src="https://sudoku-online.github.io/img/wrassling.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/master-chess.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/master-chess.png">
+                            <img src="https://sudoku-online.github.io/img/master-chess.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/retro-bowl.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/retro-bowl.png">
+                            <img src="https://sudoku-online.github.io/img/retro-bowl.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/riddle-school.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/riddle-school.png">
+                            <img src="https://sudoku-online.github.io/img/riddle-school.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/blumgi-ball.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/blumgi-ball.png">
+                            <img src="https://sudoku-online.github.io/img/blumgi-ball.png">
                             <div class="product-badge">       
                             </div>
                         </div>
